[project]
name = "tf-branch-deploy"
version = "0.2.0"
description = "ChatOps for Terraform infrastructure deployments via GitHub PRs."
readme = "README.md"
authors = [{ name = "scarowar", email = "skanthavar@live.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
tf-branch-deploy = "tf_branch_deploy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tf_branch_deploy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
